gcc/testsuite/g++.dg/cpp0x/gen-attrs-45.C
// PR c++/52906
// { dg-do compile { target c++11 } }

[[gnu::deprecated]]; // { dg-error "does not declare anything" }
